[gd_scene load_steps=4 format=3 uid="uid://d2excqtsf861v"]

[ext_resource type="Texture2D" uid="uid://dr2af8gqsho37" path="res://Ressources/Sprite/UI/skill_background.png" id="1_du07m"]
[ext_resource type="Script" path="res://Scripts/UI/skill_list_item.gd" id="1_m82tv"]
[ext_resource type="Texture2D" uid="uid://orwmbqdgjwbf" path="res://Ressources/Sprite/UI/skill_background_pressed.png" id="3_fs7l3"]

[node name="SkillListItem" type="Control"]
custom_minimum_size = Vector2(300, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 296.0
offset_bottom = 48.0
script = ExtResource("1_m82tv")

[node name="SkillIconBackgroundButton" type="TextureButton" parent="."]
layout_mode = 1
offset_right = 46.0
offset_bottom = 46.0
texture_normal = ExtResource("1_du07m")
texture_pressed = ExtResource("3_fs7l3")
ignore_texture_size = true
stretch_mode = 0

[node name="SkillIcon" type="TextureRect" parent="SkillIconBackgroundButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="SkillText" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 49.0
offset_right = 12199.0
offset_bottom = 2350.0
scale = Vector2(0.02, 0.02)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 500
theme_override_font_sizes/bold_font_size = 600
bbcode_enabled = true
scroll_active = false

[node name="SkillDetailedText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
offset_left = 49.0
offset_right = 12199.0
offset_bottom = 2350.0
scale = Vector2(0.02, 0.02)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 500
theme_override_font_sizes/bold_font_size = 600
bbcode_enabled = true
scroll_active = false
